do not setActive clients which don't take focus on ShadeHover - by this resort re-shade restacking code

BUG: 242217
FIXED-IN: 4.9
REVIEW: 104622